# databricks-apps

./: .gitignore  README.md
chatbotcuj_app/: .gitignore
data_ui_app/: CLAUDE.md  HACKATHON-MVP-DESIGN.md  README.md  app.py  app_ui_mock.py  pyproject.toml
data_ui_app/sample_files/: customer_contacts.txt  employee_data.json  sales_data.csv
holiday_request_app/: .gitignore  CLAUDE.md  README.md  app.py  create_tables_and_schema.sql  package-lock.json  pyproject.toml
simple_lakebase_app/: .gitignore
simple_streamlit_app/: .gitignore
