[project]
name = "holiday-request-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk==0.57.0",
    "pandas==2.3.1",
    "psycopg[binary]==3.2.9",
    "sqlalchemy==2.0.41",
    "streamlit==1.39.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]
